--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TETRIS GAMES WITH JAVASCRIPT</title>
+    <title>TETRIS GAMES </title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
@@ -13,7 +13,7 @@
         <p id="score">Score: <span></span></p>
         <p id="time">Time: <span></span></p>
         <button id="start">Start</button>
-        <p class="red">Press the Esc button to pause<span></span></p>
+        <p class="red">Appuyez sur le bouton Esc pour mettre en pause<span></span></p>
       </div>
       <div id="canvas"></div>
     </div>
